fix: horizontally center profile name when on smaller screen widths

--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -2,7 +2,7 @@
   max-width: 196px;
   /* used the width provided by specs to be helpful for ellipsis
     to be formed when user enters more text. */
-  margin: 0;
+  margin: 0 auto;
 
   font-weight: 500;
   font-size: 22px;
@@ -21,6 +21,7 @@
     /* used the width provided by specs to be helpful for ellipsis
       to be formed when user enters more text. */
     margin-right: 18px;
+    margin-left: 0;
 
     font-size: 42px;
     line-height: 1.14;
